@@ -108,9 +108,10 @@ if (is_admin()) {
 	include_once (dirname (__FILE__)."/nggfunctions.php");
 	
 	// required in WP 2.5, NextGEN should have higher priority
+if (IS_WP25) {	
 	remove_filter('the_content', 'do_shortcode');
 	add_filter('the_content', 'do_shortcode', 20);
-	
+}	
 	// Action calls for all functions 
 	add_filter('the_content', 'searchnggallerytags', 10);
 	add_filter('the_excerpt', 'searchnggallerytags', 10);
